# generic-cms

./: .env  .gitignore  Cargo.toml  docker-compose.dev.yml
src/: cli.rs  config.rs  main.rs
src/database/: migrations.rs  mod.rs
src/database/entities/: mod.rs  role.rs  user.rs
src/database/migrations/: m20240807_00001_create_user_tables.rs  mod.rs
src/utils/: mod.rs  trailing_slash.rs
src/web/: fallback_handler.rs  mod.rs
src/web/dashboard/: auth.rs  mod.rs  serve.rs
src/web/dashboard/app/: astro.config.mjs  package-lock.json  package.json
src/web/dashboard/app/src/components/: Header.astro  themetoggle.tsx
src/web/dashboard/app/src/layouts/: Layout.astro
src/web/dashboard/app/src/pages/: index.astro
src/web/dashboard/app/src/pages/auth/: login.astro
src/web/graphql/: mod.rs
